--- a/package.json
+++ b/package.json
@@ -4,15 +4,22 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "lint": "eslint --ext .js,.vue --ignore-path .gitignore --fix src",
+    "format": "prettier .  --write"
   },
   "dependencies": {
     "vue": "^3.2.16"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^1.9.3",
+    "eslint": "^8.2.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-vue": "^8.0.3",
+    "prettier": "2.4.1",
     "typescript": "^4.4.3",
     "vite": "^2.6.4",
+    "vite-plugin-eslint": "^1.3.0",
     "vue-tsc": "^0.3.0"
   }
 }
