--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "vue": "^3.2.16"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.3.1",
+    "@typescript-eslint/parser": "^5.3.1",
     "@vitejs/plugin-vue": "^1.9.3",
+    "@vue/eslint-config-typescript": "^9.0.1",
     "eslint": "^8.2.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-vue": "^8.0.3",
