--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,6 @@
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": true
   },
-  "eslint.validate": ["javascript", "javascriptreact", "vue"]
+  "eslint.validate": ["javascript", "javascriptreact", "vue"],
+  "css.validate": false,
 }
