--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "@typescript-eslint/parser": "^5.3.1",
     "@vitejs/plugin-vue": "^1.9.3",
     "@vue/eslint-config-typescript": "^9.0.1",
+    "autoprefixer": "^10.4.0",
     "eslint": "^8.2.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-vue": "^8.0.3",
+    "postcss": "^8.3.11",
     "prettier": "2.4.1",
+    "tailwindcss": "^2.2.19",
     "typescript": "^4.4.3",
     "vite": "^2.6.4",
     "vite-plugin-eslint": "^1.3.0",
