feat: ui completed

--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "format": "prettier .  --write"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.4.2",
+    "@heroicons/vue": "^1.0.5",
+    "@tailwindcss/forms": "^0.3.4",
     "vue": "^3.2.16"
   },
   "devDependencies": {
