--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,6 +38,9 @@ jobs:
       - name: Run Linter
         run: npm run lint
 
+      - name: Generate
+        run: npm run build
+
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3.8.0
         with:
